wr5-d8 fix ui landing page , phone code choosing unalign on some phone

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -98,6 +98,7 @@ body {
     border-left: none;
     border-right: none;
     padding-right: 0;
+    width: auto !important;
   }
 }
 
